syntax = "proto3";

option csharp_namespace = "ProcSpector.Grpc";

package insight;

service Inspector {
  rpc GetHostName (JsonReq) returns (JsonRsp);
  rpc GetUserName (JsonReq) returns (JsonRsp);
  rpc GetAllProcesses (JsonReq) returns (stream JsonRsp);
  rpc GetModules (JsonReq) returns (stream JsonRsp);
  rpc GetRegions (JsonReq) returns (stream JsonRsp);
  rpc GetHandles (JsonReq) returns (stream JsonRsp);
  rpc Kill (JsonReq) returns (JsonRsp);
  rpc CreateMemSave (JsonReq) returns (JsonRsp);
  rpc CreateScreenShot (JsonReq) returns (JsonRsp);
  rpc CreateMiniDump (JsonReq) returns (JsonRsp);
}

message JsonReq {
  string arg = 1;
}

message JsonRsp {
  string res = 1;
}
